[FIX] mail: rendering of emails in chatter
Before this commit, messages of type email were not rendered
properly in the chatter. For example, the email may display
text with dark color even when in dark theme or the layout of
bootstrap elements like `btn` might not look correct.

These style issues are caused by combining the style in content
of the email (e.g. inline styles) with the style of the webclient,
giving the impression that the original visual of the email is buggy.

This commit fixes the issue by showing a slightly transformed
style of email messages in chatter that is readable and looks nice
with the Odoo theme at hand. In particular with dark theme, the
background color matches the bubble color and the text is white.

Sometimes the exact visual of the original email is desired.
A button "Show Original Email" in the top-right corner of the
message bubble allows seeing the visual of email in its original
intention.

Task-3437069

closes odoo/odoo#131202

Related: odoo/enterprise#46143

--- a/addons/mail/static/src/web/chat_window/chat_window.scss
+++ b/addons/mail/static/src/web/chat_window/chat_window.scss
@@ -13,7 +13,7 @@
     }
 
     .o-mail-ChatWindow-command:hover {
-        background-color: rgba(0, 0, 0, 0.075);
+        background-color: rgba(0, 0, 0, 0.05);
     }
 }
 
